syntax = "proto3";

package newsfeed.v1;

//import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";


option go_package = "newsfeeds/api/newsfeed/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.newsfeed.v1";
option java_outer_classname = "HelloWorldProtoV1";

// The greeting service definition.
service NewsFeed {

  rpc CreateNewsFeed(CreateRequest) returns (CreateReply){
//    option (google.api.http) = {
//      post: "/v1/newsfeed/"
//      body: "*"
//    };

  }

  rpc ListFollowTweet(ListRequest) returns (ListReply){
//    option (google.api.http) = {
//      post: "/v1/newsfeed/list"
//      body: "*"
//    };
  }

}

// The request message containing the user's name.
message NewsFeedInfo{
  uint64 id =1;
  uint64 userId=2;
  uint64 tweetId =3;
  TweetInfo tweetInfo =4;
  google.protobuf.Timestamp CreateAt =5;
}

message CreateRequest{
  uint64 userId=1;
  uint64 tweetId =2;

}


message CreateReply{
  NewsFeedInfo  newFeedInfo=1;
}

message ListRequest{
  uint64 userId=1;
}


message ListReply{
  repeated NewsFeedInfo newFeedInfo =1;

}
message TweetInfo{
  uint64 id=1;
  uint64  userId =2;
  string  content=3;
  google.protobuf.Timestamp CreatedAt =6;

}
